same issue on safari navbar

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -19,11 +19,11 @@
 html{
   box-sizing:border-box; 
   font-size: 65%;
-  overflow-x: hidden
+  -webkit-overflow-x: hidden
 }
 
 body{
   margin:0;
   padding:0; 
-  overflow-x: hidden
+  -webkit-overflow-x: hidden
 } 
